# BetterWx_UI_Linux

./: LICENSE  README.md
.github/workflows/: build.yml
src/: App.vue
src-linux/: .gitignore  JavaScript  preload.js
src-linux/assets/linux/: betterwx.desktop
src-linux/docs/: LINUX_BUILD.md
src-linux/scripts/: create-deb-pkg.sh  install-deps.sh  package-appimage.sh
src-linux/src/auto-updater/: linux-updater.js
src-linux/src/config/: settings-manager.js
src-linux/src/daemon/: wechat-daemon.js
src-linux/src/main/: dbus-interface.xml  ime-integration.js  natives.cc
src-linux/src/security/: sandbox-policy.json
src-linux/src/system/: notification-center.js
src-linux/src/utils/: logger.js
src-linux/systemd/: betterwx-daemon.service
src-linux/test/: main-process.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  error.rs  lib.rs  structs.rs  win.rs  wx.rs
src/components/: coexist-list.vue
