[package]
name = "betterwx-ui"
version = "1.2.0"
description = "BetterWx for Linux - WeChat anti-recall and multi-instance tool"
authors = ["afaa1991", "pgy866"]
edition = "2021"

[lib]
name = "betterwx_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
faster-hex = "0.10.0"
thiserror = "2.0.6"
regex = "1.11.1"
serde_json = "1.0.133"
libc = "0.2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
